2002-05-02  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw.c: Now ovals are ovals and not ellypses.
	  Closes bug 548099.
	* HACKING, AUTHORS, CONTRIBUTORS: Updated with more authors
	  and contributors. Also extended HACKING to include ChangeLog
	  and code format.
	

2002-04-29  Anders Eriksson  <anders@faldor.umunet.org>

	* src/gerbv.c: Improved zoom. Now zooming around image center when
	zooming from menu and around mouse pointer when zooming using the
	mouse. There seems to be some (small) rounding error in the
	centering code, but it is very small. Closes 548128.

2002-04-27 Stefan Petersen (spe@stacken.kth.se)

	* src/gerbv.c: Number constants replaced with an enumeration
	  type. Also error in zooming comments fixed.
	* man/gerbv.1.in: Added blurb about zooming.
	* src/gerber.c: Bug 549602 fixed so format statements are
	  completely handled.


2002-04-27 Stefan Petersen (spe@stacken.kth.se)

	* src/gerbv.c: Changed name for all *open* functions to 
	  *load*. Implemented "unload file" in right-click popup,
	  which closes feature req. 548124.
	

2002-04-24 Stefan Petersen (spe@stacken.kth.se)

	* src/gerb_file.c: Fixed bug causing segfault when opening
	  empty file (bug 548578).

	
2002-04-24 Stefan Petersen (spe@stacken.kth.se)

	* man/gerbv.1: Removed.
	* man/gerbv.1.in: Created, so configure can add version of 
	  gerbv automagically. Also added blurb about right-click thing.
	* configure.in: man/gerbv.1 is created from man/gerbv.1.in.
	

2002-04-24 Stefan Petersen (spe@stacken.kth.se)

	* example/orcad/*: Added after submission from and with 
	  permission from Dino Ghilardi.


2002-04-10 Stefan Petersen (spe@stacken.kth.se)

	* src/gerber.c: Fixed mq arcs so circles are circles and
	  and width/height are correctly calculated. Closes bug
	  #541089. Hopefully.

	
2002-04-09 Stefan Petersen (spe@stacken.kth.se)

	* src/gerber.c: Fixed draw direction of arcs reported in
	  bug #541089. Not drawn D3 and VR1, and wrong size on some